<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:shadowColor="@android:color/black"
        android:shadowDx="6.0"
        android:shadowDy="6.0"
        android:shadowRadius="10.0"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
        android:textSize="82sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/facebookLoginButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:background="#3b5998"
        android:backgroundTint="@android:color/darker_gray"
        android:drawablePadding="0dp"
        android:drawableStart="@drawable/facebook_logo"
        android:elevation="8dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="Facebook"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toStartOf="@+id/googleLoginButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/googleLoginButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/white"
        android:backgroundTint="@android:color/darker_gray"
        android:drawableStart="@drawable/google_logo"
        android:elevation="8dp"
        android:fontFamily="@font/raleway_semibold"
        android:onClick="onGoogleSignInButtonClicked"
        android:text="Google"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/facebookLoginButton" />

    <Button
        android:id="@+id/signUpButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:elevation="8dp"
        android:fontFamily="@font/raleway_semibold"
        android:onClick="onSignUpButtonClicked"
        android:text="@string/sign_up"
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/areYouUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signInButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:elevation="8dp"
        android:fontFamily="@font/raleway_semibold"
        android:onClick="onSignInButtonClicked"
        android:text="@string/sign_in"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/continueAsGuestButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/areYouUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/are_you_actually_user"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/signInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/continueAsGuestButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:elevation="8dp"
        android:fontFamily="@font/raleway_semibold"
        android:onClick="onGuestButtonClicked"
        android:text="@string/enter_as_guest"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>